# Robocon_Robot2

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  run.sh
devices/camera/: mv_video_capture.hpp
infer/: detector.cpp  detector.h
model/: best.xml
